# freelii-core

./: .eslintrc.json  .gitignore  BUSINESS_CONTEXT.md  CLAUDE.md  NETWORK_SWITCHING.md  NETWORK_WALLET_MANAGEMENT.md  POLICY_SIGNER.md  README.md  eslintrc.js  package.json  pnpm-lock.yaml  prettierrc.js  turbo.json
.github/workflows/: release.yml
apps/cli/: package-lock.json  package.json  tsconfig.json
apps/docs/: package.json
apps/payments-server/: package.json  tsconfig.json  wallets.json
apps/web/: .env.example.new  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  components.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/prisma/: schema.prisma  (+1 more)
contracts/: Cargo.toml  Makefile
contracts/wallet_transfer_policy/: Cargo.toml  lib.rs
contracts/wallet_transfer_policy/bindings/: README.md  package-lock.json  package.json
contracts/wallet_transfer_policy/bindings/src/: index.ts
contracts/wallet_transfer_policy/src/: test.rs
contracts/wallet_transfer_policy/test_snapshots/test/: test_add_and_get_wallet_signer.1.json  test_add_and_remove_policy_signer.1.json  test_init_already_initialized.1.json  test_policy_enforcement_authorized_recipient.1.json  test_policy_enforcement_unauthorized_recipient.1.json  test_remove_wallet_signer.1.json  test_update_nonexistent_wallet_signer.1.json  test_update_wallet_signer.1.json
contracts/zafegard-policy-sdk/: README.md  package.json
contracts/zafegard-policy-sdk/src/: index.ts
contracts/zafegard-policy/src/: lib.rs
ref/: StellarContext.tsx  eascrow.env  useFreighterWallet.tsx  utils.ts
(+198 files in other folders)
