[workspace]
resolver = "2"

members = ["zafegard-policy", "wallet_transfer_policy"]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }
smart-wallet = { git = "https://github.com/kalepail/passkey-kit", branch = "next" }
smart-wallet-interface = { git = "https://github.com/kalepail/passkey-kit", branch = "next" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
